<resources>
    <string name="app_name">SNotes</string>
    <string name="skip_intro">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="easy_to_use">Easy to Use</string>
    <string name="easy_to_use_desc">Membuat note dengan\nmudah dan praktis</string>
    <string name="simple_notes">Simple Notes</string>
    <string name="simple_notes_desc">Note desain yang simple\ndan to the point</string>
    <string name="fast_and_happy">Fast and Happy</string>
    <string name="fast_and_happy_desc">Aplikasi notes yang ringan\ndan cepat</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="skip_for_now">SKIP FOR NOW</string>
    <string name="photo">Photo</string>
    <string name="welcoming">Welcome,\nMaulana Hikam</string>
    <string name="save_and_start"><![CDATA[SAVE & START]]></string>
    <string name="hello_home">Hello,\nMaulana Hikam</string>
    <string name="your_notes">My Notes</string>
    <string name="notes">Notes</string>
    <string name="judul">Judul</string>
    <string name="save">SAVE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register_btn">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
